# stoptrackingme

./: .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  build.rs  flake.nix  mise.toml
matchers/: global.toml  instagram.toml  reddit.toml  spotify.toml  threads.toml  youtube.toml
src/: main.rs  matchers.rs  matchers_types.rs
