[package]
name = "stoptrackingme"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.54", features = ["derive"] }
reqwest = "0.13.1"
rootcause = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "macros"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
walkdir = "2.5.0"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
walkdir = "2.5.0"
