[package]
name = "stoptrackingme"
version = "0.1.3"
edition = "2024"
authors = ["Lander Brandt <stoptrackingme.spool127@passmail.net>"]
license = "MIT"
repository = "https://github.com/landaire/stoptrackingme"
exclude = ["flake.nix", "flake.lock", "mise.toml"]
readme = "README.md"
description = "Utility to remove tracking IDs from URLs"

[features]
default = ["service"]
service = ["dep:service-manager"]

[dependencies]
arboard = { version = "3.6.1", default-features = false }
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.13.1", default-features = false, features = ["charset", "http2", "system-proxy", "native-tls", "blocking"] }
rootcause = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
service-manager = { version = "0.10.0", optional = true }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
walkdir = "2.5.0"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
walkdir = "2.5.0"
